--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "ts-node src/bot.ts",
+    "dev": "ts-node-dev src/bot.ts",
     "start": "node dist/bot.js"
   },
   "keywords": [
@@ -15,12 +15,15 @@
   "author": "Collins Ezedike-egwom",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
     "@types/node-telegram-bot-api": "^0.64.8",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   }
 }
