--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "src/bot.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "npm install && tsc",
     "dev": "ts-node-dev src/bot.ts",
-    "start": "node dist/bot.js"
+    "start": "node dist/app.js"
   },
   "keywords": [
     "CopperX Payout API"
@@ -19,9 +19,12 @@
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "express": "^4.21.2",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "pusher": "^5.2.0",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.1",
     "@types/node-telegram-bot-api": "^0.64.8",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
