--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.2",
     "node-telegram-bot-api": "^0.66.0",
     "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "redis": "^4.7.0"
   },
   "devDependencies": {
